# petdex

./: .gitignore  README.md  classify.ipynb  docker-compose.yml  pyproject.toml  search.ipynb
app/: domain.py  main.py  settings.py  test.py
app/database/: migrate.py  repository.py
app/processing/features/: colors.py  edges.py  haralick.py  hog.py  hu_moments.py  intensity.py
app/processing/filters/: canny.py  gaussian.py  sobel.py
app/server/: handler.py
app/services/: features.py  filters.py  histogram.py  loader.py  storage.py
app/templates/: index.html
app/utils/: operations.py
data/: metadata.csv
lib/: database.py  domain.py  histogram.py
lib/features/: bovw.py  colors.py  haralick.py  hog.py  hu_moments.py  lbp.py  log.py
lib/filters/: canny.py  laplacian.py  sobel.py
lib/utils/: colors.py  operations.py
