[project]
name = "petdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.3.0",
    "flask>=3.1.3",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymilvus[milvus-lite]>=3.0.0",
]
